# log4rs

./: .editorconfig  .gitignore  .markdownlint.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  circle.yml  cross-test.sh  test.sh
.cargo/: config.toml
.circleci/: config.yml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: audit.yml  coverage.yml  editor-check.yml  lint.yml  lint_each_feature.sh  main.yml  release.yml  test_each_feature.sh
benches/: rotation.rs
codegen/: Cargo.toml
codegen/src/: main.rs
doc/: search-index.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js  (+1 more)
doc/implementors/log/: trait.Log.js
doc/implementors/log4rs/: trait.Append.js
doc/log4rs/: enum.FilterResponse.html  fn.default_loggers.html  fn.init.html  fn.init_config.html  fn.init_file.html  index.html  sidebar-items.js  stability.html  stability.json  trait.Append.html  trait.Filter.html  trait.Log.html  trait.MakeLogger.html
doc/log4rs/appender/: index.html  sidebar-items.js  struct.ConsoleAppender.html  struct.ConsoleAppenderBuilder.html  struct.FileAppender.html  struct.FileAppenderBuilder.html
doc/log4rs/config/: enum.Error.html  index.html  sidebar-items.js  struct.Appender.html  struct.AppenderBuilder.html  struct.Config.html  struct.ConfigBuilder.html  struct.Error.html  struct.Errors.html  struct.Logger.html  struct.LoggerBuilder.html  struct.Root.html  struct.RootBuilder.html
doc/log4rs/filter/: index.html  struct.ThresholdFilter.html
doc/log4rs/loggers/: index.html  struct.ConsoleLoggerMaker.html  struct.FileLoggerMaker.html
doc/log4rs/pattern/: index.html  sidebar-items.js  struct.Error.html  struct.PatternLayout.html  struct.PatternLogger.html
doc/log4rs/toml/: enum.Error.html  fn.parse.html  index.html  sidebar-items.js  struct.Config.html  struct.ConsoleAppenderCreator.html  struct.Creator.html  struct.Errors.html  struct.FileAppenderCreator.html  struct.ParseErrors.html  struct.ThresholdFilterCreator.html  struct.TomlConfig.html  trait.CreateAppender.html  trait.CreateFilter.html
doc/src/log4rs/: appender.rs.html  config.rs.html  filter.rs.html  lib.rs.html  loggers.rs.html  pattern.rs.html
doc/v0.3.3/: search-index.js
doc/v0.3.3/log4rs/: enum.FilterResponse.html  fn.init_config.html  fn.init_file.html  index.html  sidebar-items.js  trait.Append.html  trait.Filter.html
doc/v0.4.0/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  index.html
doc/v0.4.1/: search-index.js
doc/v0.4.1/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  index.html
doc/v0.4.2/: search-index.js
doc/v0.4.2/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  sidebar-items.js
doc/v0.4.3/: search-index.js
doc/v0.4.3/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  index.html  sidebar-items.js
doc/v0.4.4/: search-index.js
doc/v0.4.4/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  index.html  struct.Handle.html
doc/v0.4.5/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  struct.Handle.html
doc/v0.4.6/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  index.html  sidebar-items.js  struct.Handle.html
doc/v0.4.7/: search-index.js
doc/v0.4.7/log4rs/: enum.Error.html  index.html
doc/v0.4.8/log4rs/: fn.init_config.html  fn.init_file.html  struct.Handle.html
doc/v0.5.0/: search-index.js
doc/v0.5.0/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  index.html  struct.Handle.html
doc/v0.5.1/: search-index.js
doc/v0.5.1/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  init_config.v.html  struct.Handle.html
doc/v0.5.2/: search-index.js
doc/v0.5.2/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  index.html  struct.Handle.html
doc/v0.6.1/: search-index.js
doc/v0.6.1/log4rs/: enum.Error.html  fn.init_config.html  fn.init_file.html  index.html  struct.Handle.html
docs/: Configuration.md
examples/: color_control.rs  compile_time_config.rs  custom.rs  custom_config.rs  custom_config.yml  json_logger.rs  log_to_file.rs  log_to_file_with_rolling  log_to_file_with_rolling.rs  log_to_file_with_rolling_and_size_trigger.rs  log_to_file_with_rolling_and_time_trigger.rs  multi_logger.yml  multi_logger_config.rs  sample_config.yml  user_config.rs
examples/json_logger/: Cargo.toml  log4rs.yaml
examples/json_logger/src/: main.rs
examples/log_to_file/: Cargo.toml
examples/log_to_file/src/: main.rs
src/: appender.rs  atomic.rs  config.rs  config_parsing.rs  cstd.rs  encoder.rs  file.rs  filter.rs  lib.rs  loggers.rs  parser.rs  pattern.rs  priv_file.rs  priv_io.rs  priv_serde.rs  record.rs
src/append/: closure.rs  console.rs  console_serde.rs  console_serde.rs.in  daily_file.rs  dedup.rs  file.rs  file_serde.rs  file_serde.rs.in  mod.rs  windbg.rs
src/append/console/: mod.rs  serde.rs  serde.rs.in
src/append/file/: mod.rs  serde.rs  serde.rs.in
src/append/rolling_file/: config.rs  config.rs.in  mod.rs
src/append/syslog/: consts.rs  mod.rs  rfc5424.rs  serde.rs  serde.rs.in  severity.rs
src/config/: config.rs  file.rs  mod.rs  raw.rs  runtime.rs
src/encode/: json.rs  mod.rs
src/encode/json/: mod.rs  serde.rs  serde.rs.in
src/encode/pattern/: log_content.rs  log_path.rs  mod.rs  parser.rs  serde.rs  serde.rs.in
src/encode/writer/: ansi.rs  console.rs  mod.rs  simple.rs
src/encoder/: mod.rs
src/encoder/pattern/: mod.rs  parser.rs
src/file/: mod.rs  raw.rs  serde.rs  serde.rs.in
src/filter/: mod.rs  threshold.rs  threshold_serde.rs  threshold_serde.rs.in
src/filter/threshold/: mod.rs  serde.rs  serde.rs.in
src/pattern/: mod.rs
src/toml/: mod.rs  raw.rs  serde.rs  serde.rs.in
test/: Cargo.toml  log.toml  log.yml
test/src/: main.rs
test_cfgs/: malformed_appender.yml  test.json  test.toml  test.yml
tests/: color_control.rs  init_cfg_error_handler.rs  init_json_config.rs  init_malformed_appenders.rs  init_toml_config.rs  init_yaml_config.rs
(+964 files in other folders)
