[package]
name = "log4rs"
version = "0.4.8"
authors = ["Steven Fackler <sfackler@gmail.com>"]
description = "A highly configurable multi-output logging implementation for the `log` facade"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/log4rs"
documentation = "https://sfackler.github.io/log4rs/doc/v0.4.8/log4rs"

[features]
default = ["console_appender", "file_appender", "pattern_encoder"]

yaml_format = ["serde_yaml"]
json_format = ["serde_json"]
toml_format = ["toml"]

console_appender = ["console_writer", "simple_writer"]
file_appender = ["simple_writer"]
rolling_file_appender = ["simple_writer"]
compound_policy = []
delete_roller = []
fixed_window_roller = []
size_trigger = []
json_encoder = ["serde_json"]
pattern_encoder = []
ansi_writer = []
console_writer = ["ansi_writer"]
simple_writer = []
threshold_filter = []

gzip = ["flate2"]

[dependencies]
antidote = "1.0"
chrono = "0.2"
crossbeam = "0.2.9"
flate2 = { version = "0.2", optional = true }
fnv = "1.0"
humantime = "1.0"
libc = "0.2"
log = "0.3"
serde = "0.8"
serde-value = "0.3"
typemap = "0.3"
serde_json = { version = "0.8", optional = true }
serde_yaml = { version = "0.4", optional = true }
toml = { version = "0.2", optional = true, default_features = false, features = ["serde"] }

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2"
winapi = "0.2"

[dev-dependencies]
tempdir = "0.3"
